[tool.poetry]
name = "clockwork_tools"
version = "0.1.0"
description = "Tools to interact with Clockwork cluster"
authors = ["Mila team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
